test/Spectre.Console.Cli.Tests/Expectations/Parsing/UnknownCommand/Test_7.Output.verified.txt
Error: Unknown command 'bat'.

       qux bat
           ^^^ Did you mean 'bar'?